--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/isiut/botto-ts/issues"
   },
-  "homepage": "https://github.com/isiut/botto-ts#readme"
+  "homepage": "https://github.com/isiut/botto-ts#readme",
+  "dependencies": {
+    "discord.js": "^14.5.0"
+  }
 }
